<resources>
    <string name="app_name">ACHIVGO</string>
    <string name="hello">Hello</string>
    <string name="pawe">Paweł</string>
    <string name="search_elements">Search elements</string>
    <string name="goals">Goals</string>
    <string name="day_plan">Day Plan</string>
    <string name="quotes">Quotes</string>
    <string name="my_ideas">My Ideas</string>
    <string name="hacker_articles">Hacker Articles</string>
    <string name="my_achievements">My Achievements</string>
    <string name="top_quotes">TOP QUOTES</string>
    <string name="if_today_were_the_last_day_of_your_life_would_you_want_to_do_what_you_are_about_to_do_today">“If today were the last day of your life, would you want to do what you are about to do today?”</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
</resources>